fixed my headache

--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -45,8 +45,20 @@
 %\input{contents/software/softwarespec.tex}
 \input{contents/software/softwaredesc.tex}
 \input{contents/software/partconclusion.tex}
+
 \chapter{Test}
 \input{contents/test/test.tex}
+\input{contents/test/ultrasound.tex}
+\input{contents/test/motor.tex}
+\input{contents/test/CPLD.tex}
+\input{contents/test/h-bridge.tex}
+\input{contents/test/PWM.tex}
+\section{Integration Testing}
+\input{contents/test/PWMcontrol.tex}
+\input{contents/test/interface.tex}
+\input{contents/test/system.tex}
+\input{contents/test/acceptance.tex}
+
 \chapter{Conclusion}
 \input{contents/conclussion.tex}
 \chapter{Appendices}
