added to ultrasound sensor test

--- a/Rapport/bibliography/bibliography.bib
+++ b/Rapport/bibliography/bibliography.bib
@@ -35,3 +35,9 @@
 	url = {http://www.robotshop.com/en/parallax-ping-ultrasonic-sensor.html},
 	year = 2017
 }
+
+@online{SOF,
+	title = {Speed of sound},
+	url = {https://en.wikipedia.org/wiki/Speed_of_sound},
+	year = 2016
+}
