--- a/Rapport/contents/test/CPLD.tex
+++ b/Rapport/contents/test/CPLD.tex
@@ -1,1 +1,10 @@
 \subsection{CPLD}
+\subsubsection{Equipment}
+\begin{enumerate}
+	\item[•]Hameg HM8040-2 Triple Power Supply
+	\item[•]Fluke 45 Multimeter
+\end{enumerate}
+
+\subsubsection{Setup}
+
+\subsubsection{Results}
