--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -48,16 +48,16 @@
 
 \chapter{Test}
 \input{contents/test/test.tex}
-\input{contents/test/ultrasound.tex}
-\input{contents/test/motor.tex}
-\input{contents/test/CPLD.tex}
-\input{contents/test/h-bridge.tex}
-\input{contents/test/PWM.tex}
+\input{contents/test/ultrasound.tex} \newpage
+\input{contents/test/motor.tex} \newpage
+\input{contents/test/CPLD.tex} \newpage
+\input{contents/test/h-bridge.tex} \newpage
+\input{contents/test/PWM.tex} \newpage
 \section{Integration Testing}
-\input{contents/test/PWMcontrol.tex}
-\input{contents/test/interface.tex}
-\input{contents/test/system.tex}
-\input{contents/test/acceptance.tex}
+\input{contents/test/PWMcontrol.tex} \newpage
+\input{contents/test/interface.tex} \newpage
+\input{contents/test/system.tex} \newpage
+\input{contents/test/acceptance.tex} \newpage
 
 \chapter{Conclusion}
 \input{contents/conclussion.tex}
