Nye billeder, jaaa
hrappy jewyear!

--- a/Rapport/contents/formalities/frontpage.tex
+++ b/Rapport/contents/formalities/frontpage.tex
@@ -16,7 +16,7 @@ Group 2\\
 \vspace{3 mm}
 3. Semester IT-Technology
 \end{Huge}
-\includegraphics[width=0.7\textwidth]{figures/Forsidebil.PNG}
+\includegraphics[width=0.7\textwidth]{figures/frontPageBot.png}
 \end{center}
 \vspace*{\fill}
 \begin{center}
