Delvis konklusion og reqspec

--- a/Rapport/contents/reqspec.tex
+++ b/Rapport/contents/reqspec.tex
@@ -4,6 +4,8 @@ This section specifies the requirements. The requirements have been found throug
 \begin{enumerate}
 	\item[•]The robot needs line following capabilities
 	\item[•]The robot needs object avoidance
+	\item[•]The robot needs localization
+	\item[•]The robot needs to find a new route after avoiding an object
 	\item[•]The robot should make use of an H-bridge
 	\item[•]The robot should make use of Motors
 	\item[•]The robot needs a way to implement motor control
@@ -11,3 +13,4 @@ This section specifies the requirements. The requirements have been found throug
 	\item[•]The robot should make use of the Magician chassis
 \end{enumerate}
 
+%
