--- a/Rapport/contents/software/softwaredesc.tex
+++ b/Rapport/contents/software/softwaredesc.tex
@@ -166,7 +166,8 @@ Using these inputs without any logic control, allows for unwanted configurations
 \img{figures/cpldlogic.png}{Single h-bridge logic block}{hbridgecpldlogic}{0.8}
 \section{Part conclusion}
 
+The very first issue with the software came 
 \fixme{Software problemer og løsninger}
-\fixme{Hvorfor ikke RTOS?}
+Another consideration has been to implement a real time system, such as RTOS, for the program. RTOS would make it possible for the sensors to be read simultaneously instead of one after the other. This could make a huge difference in time constricted systems, however, the system used in this project does fine without, since reading all 3 sensors take less than 10 ms.
 
-\fixme{hvilke krav har vi droppet?}
+Due to time constraints, a few requirements for the project have not been met. These include the need for line following capabilities, localization and the ability to return to a path that leads to goal.
