--- a/Rapport/contents/test/ultrasound.tex
+++ b/Rapport/contents/test/ultrasound.tex
@@ -18,7 +18,7 @@ In order to to validate to the results we can calculate the actual measured leng
 \label{ultrasoundtestresults}
 \begin{tabular}{|l|l|l|l|}
 \hline
-Test distance & Time Pulse measured & calculated  distance & Difference \\ \hline
+\textbf{Test distance} & \textbf{Time Pulse measured} & \textbf{calculated  distance} & \textbf{Difference} \\ \hline
 30mm          & 152                 & 26.2mm               & 3.8mm      \\ \hline
 50mm          & 285                 & 49.1mm               & 0.9mm      \\ \hline
 100mm         & 600                 & 103.4mm              & 3.4mm      \\ \hline
@@ -27,3 +27,5 @@ Test distance & Time Pulse measured & calculated  distance & Difference \\ \hlin
 \end{tabular}
 \caption{Ultrasound test results}
 \end{table}
+
+The results show that when measuring objects closer that one meter the sensor is accurate within spec of $\pm 1cm$
