--- a/Rapport/contents/test/ultrasound.tex
+++ b/Rapport/contents/test/ultrasound.tex
@@ -4,7 +4,7 @@ The purpose of this test is to measure is the HRC-S04 Ultrasonic distance sensor
 \subsubsection{Equipment}
 
 \begin{enumerate}
-    \item[•]Arduino UNO
+    \item[•]Arduino UNO Microcontroller
     \item[•]Agilent MSO-X 3024A Oscilloscope    
 \end{enumerate}
 
