--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -52,7 +52,7 @@
 \input{contents/test/motor.tex} \newpage
 \input{contents/test/CPLD.tex} \newpage
 \input{contents/test/h-bridge.tex} \newpage
-\input{contents/test/PWM.tex} \newpage
+%\input{contents/test/PWM.tex} \newpage
 \section{Integration Testing}
 \input{contents/test/PWMcontrol.tex} \newpage
 \input{contents/test/interface.tex} \newpage
