--- a/Rapport/lists/glossary.tex
+++ b/Rapport/lists/glossary.tex
@@ -1,10 +1,10 @@
-\nomenclature{ADC}{Analog-digital conversion}
-\nomenclature{PID}{Proportional-integral-derivative}
-\nomenclature{THT}{Through-hole-technology}
-\nomenclature{3D print}{3-Dimensional printing}
-\nomenclature{PWM}{Pulse-width modulation}
-\nomenclature{GUI}{Graphical User Interface}
+\nomenclature{PWM}{Pulse-width Modulation}
 \nomenclature{IDE}{Integrated Development Environment}
 \nomenclature{MCU}{Microcontroller Unit}
-\nomenclature{PCB}{Printed Circuit Board}
 \nomenclature{UART}{Universal Asynchronous Receiver/Transmitter}
+\nomenclature{DC}{Direct Current}
+\nomenclature{PNP}{Positive-Negative-Positive}
+\nomenclature{NPN}{Negative-Positive-Negative}
+\nomenclature{CPLD}{Complex Programmable Logic Devies}
+\nomenclature{RTOS}{Real-Time Operating System} 
+\nomenclature{MOSFET}{Metal-Oxide-Semiconductor-Field-Effect Transistor}
