--- a/Rapport/contents/test/h-bridge.tex
+++ b/Rapport/contents/test/h-bridge.tex
@@ -1,4 +1,4 @@
-\subsection{H-Bridge}
+\subsection{H-Bridge} \fixme{jeg retter igennem når jeg er kommet hjem. Henrik.}
 
 \subsubsection{Equipment}
 \begin{enumerate}
@@ -8,7 +8,7 @@
 
 \subsubsection{Setup}
 Power to the H-bridge is supplied by the power supply. Current and voltage will be measured by the multimeter.
-All of the Mosfet transistors were removed before doing the test. It was done to avoid powering the engines.
+All of the MOSFET's were removed before doing the test. It was done to avoid powering the engines.
 
 
 \subsubsection{Results}
