--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -55,7 +55,7 @@
 %\input{contents/test/PWM.tex} \newpage
 \section{Integration Testing}
 \input{contents/test/PWMcontrol.tex} \newpage
-\input{contents/test/interface.tex} \newpage
+%\input{contents/test/interface.tex} \newpage
 \input{contents/test/system.tex} \newpage
 \input{contents/test/acceptance.tex} \newpage
 
