removed accpetance test

--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -57,7 +57,7 @@
 \input{contents/test/PWMcontrol.tex} \newpage
 %\input{contents/test/interface.tex} \newpage
 \input{contents/test/system.tex} \newpage
-\input{contents/test/acceptance.tex} \newpage
+%\input{contents/test/acceptance.tex} \newpage
 
 \chapter{Conclusion}
 \input{contents/conclussion.tex}
